# AutoPaper

./: .gitignore  Agents.md  README.md  address.py  doi1000.csv  doi_resolve_result.csv  main.py  open_access_adapter.py  publisher_address.txt  pyproject.toml  statistic.csv   unsupported_sites.csv
config/: config.toml  config_backup.toml
core/: app_config.py  browser_controller.py  create_rss_task.py  csv_manager.py  downloader.py  gui.py  logger.py  resolve_doi_url.py  task_executor.py  task_manager.py  temp  utils.py  yanzhen.py
docs/: packaging.md
gui/: __init__.py  config_tab.py  log_tab.py  main_window.py  onboarding.py  task_detail_tab.py  task_manager_tab.py
logs/: index.csv
photos/: yanzhen.py
publisher_download/: acs.py  biomedcentral.py  cdnsciencepub.py  cell.py  common.py  generic.py  hindawi.py  ieee.py  iopscience.py  jospt.py  literatum.py  nature.py  pnas.py  router.py  rsc.py  sage.py  science.py  sciencedirect.py  springer.py  tandfonline.py  thieme.py  wiley.py
publisher_login/: acs.py  cell.py  nature.py  router.py  rsc.py  sciencedirect.py  springer.py  tandfonline.py  wiley.py
scripts/: build_mac.sh  build_win.ps1  mac_first_launch_fix.sh  make_release.py
tasks/: task_02.csv  task_2026_0423_1322.csv
tests/: test_acs_download.py  test_app_config.py  test_browser_controller.py  test_create_rss_task.py  test_download_common.py  test_download_router.py  test_downloader.py  test_fetch_page_source.py  test_gui.py  test_gui_launch.py  test_hotkeys.py  test_logger.py  test_login_router.py  test_main_entry.py  test_main_window.py  (+6 more)
(+2 files in other folders)
